# octodns-netbox-dns

./: .editorconfig  .gitignore  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  README.md  justfile  lefthook.yml  pyproject.toml
.gitea/workflows/: build.yml  build_release.yml  changelog.yml  check_code.yml
.github/issue_template/: bug_report.md
.github/workflows/: check_code.yml
.lefthook/pre-commit/: format.sh
src/octodns_netbox_dns/: __init__.py
