[tool.poetry]
name = "octodns-netbox-dns"
version = "0.1.0"
description = ""
authors = ["Jeffrey C. Ollie <jeff@ocjtech.us>"]

[tool.poetry.dependencies]
python = "^3.11"
octodns = "^1.2.1"
pynetbox = "^7.2.0"
dnspython = "^2.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
